--- a/css/style.css
+++ b/css/style.css
@@ -779,9 +779,7 @@ img {
 }
 
 .social__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   width: 40px;
   height: 40px;
 
